[package]
name = "transaction_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ic-stable-structures="0.6.5"
icrc-ledger-types={ git = "https://github.com/dfinity/ic.git"}



async-trait = "0.1.81"


serde = { version = "1.0.203", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_json = { version = "^1.0.107" }
ciborium = "0.2.1"
hex = { version = "0.4.3", features = ["serde"] }

num-traits="0.2.19"

hex-literal="0.4.1"
num-bigint="0.4.6"
rlp="0.5.2"


strum = "0.26.3"
strum_macros = "0.26"

thousands="0.2.0"
minicbor = { version = "0.19.1",features = ["derive","alloc"] }
minicbor-derive = "0.13.0"



[dev-dependencies]
proptest="1.4.0"
